--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,6 +17,8 @@ jobs:
           # Your GitHub token
           # The following scopes are required:
           #  - public_access (default scope)
+          #  - public_repo
+          #  - read:project
           # The following additional scopes may be required:
           #  - read:org      (for organization related metrics)
           #  - read:user     (for user related data)
@@ -30,10 +32,12 @@ jobs:
           base: header, activity, community, repositories, metadata
           config_display: columns
           config_timezone: America/Bogota
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: C
+          plugin_activity: yes
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          plugin_activity_limit: 5
+          plugin_activity_load: 300
+          plugin_activity_visibility: all
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_sections: repositories
@@ -63,6 +67,9 @@ jobs:
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: base
+          plugin_projects: yes
+          plugin_projects_descriptions: yes
+          plugin_projects_limit: 3
           plugin_topics: yes
           plugin_topics_limit: 15
           plugin_topics_mode: icons
