--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,7 +30,7 @@ jobs:
           user: gatodemontecristo
           template: classic
           base: header, activity, community, repositories, metadata
-          config_display: columns
+          config_display: large
           config_padding: 0, 4 + 0%
           config_timezone: America/Bogota
           plugin_activity: yes
