--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -17,6 +17,7 @@ jobs:
           # Your GitHub token
           # The following scopes are required:
           #  - public_access (default scope)
+          #  - repo
           #  - public_repo
           #  - read:project
           # The following additional scopes may be required:
@@ -30,18 +31,16 @@ jobs:
           user: gatodemontecristo
           template: classic
           base: header, activity, community, repositories, metadata
+          base_hireable: yes
           config_display: large
-          config_padding: 0, 4 + 0%
-          config_timezone: America/Bogota
+          config_padding: 0, 8 + 0%
+          config_timezone: America/Lima
           plugin_activity: yes
           plugin_activity_days: 14
           plugin_activity_filter: all
           plugin_activity_limit: 5
           plugin_activity_load: 300
           plugin_activity_visibility: all
-          plugin_followup: yes
-          plugin_followup_archived: yes
-          plugin_followup_sections: repositories
           plugin_habits: yes
           plugin_habits_charts_type: classic
           plugin_habits_days: 14
@@ -69,9 +68,11 @@ jobs:
           plugin_lines_repositories_limit: 4
           plugin_lines_sections: base
           plugin_projects: yes
-          plugin_projects_descriptions: yes
-          plugin_projects_limit: 3
-          plugin_topics: yes
-          plugin_topics_limit: 15
-          plugin_topics_mode: icons
-          plugin_topics_sort: activity
+          plugin_projects_limit: 4
+          plugin_repositories: yes
+          plugin_repositories_order: featured, pinned, starred, random
+          plugin_stargazers: yes
+          plugin_stargazers_charts: yes
+          plugin_stargazers_charts_type: classic
+          plugin_stargazers_days: 14
+          plugin_traffic: yes
